<resources>
    <string name="app_name">iHerb Pro</string>
    <string name="add_prescription_desc" />
    <string name="profile_notification_menu">Уведомления</string>
    <string name="profile_orders_menu">Мои заказы</string>
    <string name="profile_wishlist_menu">Лист желаний</string>
    <string name="progile_bad_scan_menu">Бад-сканер</string>
    <string name="profile_title">Профиль</string>
</resources>